--- a/src/pages/GenericDropdown.module.scss
+++ b/src/pages/GenericDropdown.module.scss
@@ -1,23 +1,6 @@
-.divTable,
-.ddTable {
-    width: fit-content;
-    border-collapse: collapse;
-    background-color: transparent;
-}
-
-.ddTable {
-    // border: 1px solid blue;
-    background-color: rgb(94, 94, 96);
-    width: 100%;
-}
-
-.divTable {
-    // border: 1px solid yellow;
-    width: fit-content;
-}
-
-.trhover {
-    background: #f7aaaa;
+.tr:hover {
+    border: 1px solid blue;
+    cursor: pointer;
 }
 
 .tr {
@@ -25,233 +8,3 @@
     vertical-align: center;
     align-items: center;
 }
-
-.tr-hoverable:hover {
-    background-color: #f7aaaa;
-}
-
-.th,
-.td {
-    overflow: hidden;
-    text-align: left;
-    padding: 0;
-    margin: 0;
-    user-select: none;
-    box-sizing: content-box;
-    vertical-align: middle;
-    display: flex;
-}
-
-.th,
-.gridtd {
-    white-space: nowrap;
-    overflow: hidden;
-    text-align: left;
-    font-size: 14px;
-}
-
-.th {
-    position: relative;
-    font-weight: bold;
-    text-align: left;
-    cursor: pointer;
-    overflow: hidden;
-    color: black;
-    background-color: white;
-    // border-right: 1px solid blue;
-}
-
-.td {
-    background-color: black;
-    color: white;
-    padding: 2px;
-    user-select: text;
-    z-index: 1001;
-}
-
-.tr-hoverable:hover {
-    background: #f7aaaa;
-    display: flex;
-    width: 100%;
-}
-
-
-.coldivider {
-    position: absolute;
-    right: 0;
-    top: 0;
-    height: 100%;
-    width: 5px;
-    background: rgba(0, 0, 0, 0.5);
-    cursor: col-resize;
-    user-select: none;
-    touch-action: none;
-    background: black;
-}
-
-@media (hover: hover) {
-    .coldivider {
-        opacity: 0;
-    }
-
-    *:hover>.coldivider {
-        opacity: 1;
-    }
-}
-
-.material-symbol-outlined {
-    cursor: pointer;
-}
-
-.dropdown-hidden {
-    z-index: 0;
-    display: flex;
-}
-.dropdown {
-    box-sizing: content-box;
-    vertical-align: middle;
-    align-items: center;
-    display: flex;
-    cursor: pointer;
-    z-index: 0;
-    overflow: visible;
-}
-
-.rz-placeholder {
-    border: 1px solid rgb(70, 70, 73);
-    z-index: 0;
-    background-color: transparent;
-    // box-sizing: content-box;
-    // vertical-align: middle;
-    // align-items: center;
-    // display: flex;
-}
-
-.rz-placeholder {
-    border: 1px solid rgb(70, 70, 73);
-    z-index: 0;
-    background-color :rgb(70, 70, 73);
-    // box-sizing: content-box;
-    // vertical-align: middle;
-    // align-items: center;
-    // display: flex;
-}
-.dropdown-content {
-    z-index: 1000;
-    position: absolute;
-    box-sizing: content-box;
-    align-items: center;
-    display: flex;
-}
-
-.dropdown-content-hidden {
-    z-index: 0;
-    position: absolute;
-}
-
-.table-container {
-    padding: 0;
-    margin: 0;
-    border: 1px solid red;
-}
-
-.dd-container {
-    padding: 10px;
-    position: flex;
-    z-index: 100000;
-    position: absolute;
-    background-color :rgb(70, 70, 73);
-    margin: 10px;
-    border: 1px solid red;
-}
-
-.dd-container-hidden {
-    z-index: 0;
-    display: none;
-}
-
-.button {
-    align-items: center;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    font-size: 14px;
-    color: black;
-    border-style: solid;
-    border-color: white;
-    cursor: pointer;
-    margin: 2px;
-    border-radius: 15px;
-    display: block;
-    transform: translateY(25%);
-    margin: 0px;
-}
-
-
-.active {
-    background-color: #f03a3a;
-    transition-duration: 0.2s;
-    align-items: center;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    font-size: 14px;
-    color: black;
-    border-style: solid;
-    border-color: white;
-    cursor: pointer;
-    margin: 2px;
-    border-radius: 15px;
-    display: block;
-    transform: translateY(25%);
-    margin: 0px;
-}
-
-.rowdivider {
-    position: absolute;
-    cursor: row-resize;
-    user-select: none;
-    touch-action: none;
-    display: flex;
-}
-
-.rowdivider:hover {
-    opacity: 1;
-}
-
-@media (hover: hover) {
-    .rowdivider {
-        opacity: 0;
-        cursor: row-resize;
-    }
-}
-
-.black {
-    color: black;
-}
-
-.white {
-    color: white;
-}
-
-.whitespace-nowrap {
-    white-space: nowrap;
-}
-
-.rz-textbox.findcomponent {
-
-    color: white;
-    background-color: inherit;
-    font-size: 16px;
-    border-bottom: 1px solid #2f333d;
-    border-top: 1px solid #2f333d;
-    width: 100%;
-    cursor: pointer;
-}
-
-.sdd-hidden {
-    display: none;
-}
-
-.sdd {
-    z-index: 1000;
-}
-
