--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -22,6 +22,7 @@
     display: flex;
     vertical-align: center;
     align-items: center;
+    width: 100%;
 }
 
 .th,
@@ -31,9 +32,9 @@
     padding: 0;
     margin: 0;
     user-select: none;
-    box-sizing: content-box;
     vertical-align: middle;
     z-index: 0;
+    // border-right: 1px solid red;
 }
 
 .th,
@@ -60,11 +61,17 @@
 .td {
     display: flex;
     z-index: 0;
-    background-color: black;
     color: white;
-    border-left: rgb(90, 88, 88) 1px solid;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
 }
 
+// .tr>.td {
+//     background-color: rgb(95, 92, 92);
+// }
+// .tr>.th>.td {
+//     background-color: white;
+// }
 
 .tr:hover {
     border: 1px solid blue;
@@ -76,12 +83,10 @@
     right: 0;
     top: 0;
     height: 100%;
-    width: 5px;
-    background: rgba(0, 0, 0, 0.5);
+    width: 2px;
     cursor: col-resize;
     user-select: none;
     touch-action: none;
-    background: black;
 }
 
 @media (hover: hover) {
@@ -91,6 +96,7 @@
 
     *:hover>.coldivider {
         opacity: 1;
+        transform: translateX(-2px);
     }
 }
 
@@ -99,9 +105,8 @@
 }
 
 .rz-placeholder {
-    border: 1px solid black;
-    z-index: 1000;
-    background-color: rgb(70, 70, 73);
+    z-index: 0;
+    // margin-bottom: 2px;
 }
 
 .dropdown-content {
@@ -256,4 +261,9 @@
 
 .searchicon {
     color: white;
+}
+
+.dropdown {
+    display: inline-block;
+    border: 1px solid rgb(70, 70, 73);
 }
