--- a/src/pages/Grid.module.scss
+++ b/src/pages/Grid.module.scss
@@ -1,7 +1,9 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    // display: flex;
+    // flex-wrap: wrap;
+    // align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
 }
 
 .dynamicgrid-dd {
@@ -9,11 +11,11 @@
     // margin-left: 10px;
     // margin-top: 50px;
     flex-direction: column;
-    z-index: 1;
     flex: 1 1 200px;
     align-self: flex-start;
-    margin: 10px;
     max-width: 200px;
+    position: absolute;
+    z-index: 1;
 }
 
 .input {
@@ -23,8 +25,8 @@
     cursor: pointer;
     flex: 1 1 200px;
     align-self: flex-start;
-    margin: 10px;
     position: relative;
     flex-direction: column;
-    z-index: 0;
+    border-radius: 6px;
+    left: 200px;
 }
