--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -5,7 +5,6 @@
 }
 
 .ddTable {
-    border: 1px solid red;
     background-color: black;
     padding: 10px;
     display: flex;
@@ -35,7 +34,7 @@
     vertical-align: middle;
     z-index: 0;
     box-sizing: border-box;
-    border-right: 1px solid red;
+    padding: 0.4em 0.6em;
 }
 
 .th,
@@ -65,6 +64,7 @@
     color: white;
     text-overflow: ellipsis;
     box-sizing: border-box;
+    user-select: text;
 }
 
 // .tr>.td {
@@ -88,16 +88,20 @@
     cursor: col-resize;
     user-select: none;
     touch-action: none;
+    // border: 2px solid blue;
+    background-color: var(--bg-color);
+    opacity: 1;
 }
 
 @media (hover: hover) {
-    .coldivider {
-        opacity: 0;
-    }
+    // .coldivider {
+    //     opacity: 0;
+    // }
 
     *:hover>.coldivider {
+        border-right: 2px solid blue;
         opacity: 1;
-        transform: translateX(-2px);
+        // transform: translateX(-2px);
     }
 }
 
@@ -132,7 +136,7 @@
     padding: 10px;
     position: absolute;
     z-index: 1000;
-    border: 1px solid yellow;
+    // border: 1px solid yellow;
     resize: both;
 }
 
@@ -264,7 +268,3 @@
     color: white;
 }
 
-.dropdown {
-    display: inline-block;
-    border: 1px solid rgb(70, 70, 73);
-}
