--- a/src/pages/GenericDropdown.module.scss
+++ b/src/pages/GenericDropdown.module.scss
@@ -73,3 +73,16 @@
     text-overflow: ellipsis;
     box-sizing: border-box;
 }
+
+.search-panel {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.1rem;
+    margin-top: 0rem;
+    padding: 5px;
+    height: 30px;
+}
+
+.search-panel:hover {
+    border: white;
+}
