--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -74,6 +74,9 @@
     // border-right: 2px solid  rgb(105, 105, 105);
 }
 
+.td.focus {
+    border: 1px solid lime;
+}
 // .tr>.td {
 //     background-color: rgb(95, 92, 92);
 // }
@@ -277,3 +280,11 @@
     color: white;
 }
 
+.share {
+    color: green;
+    margin-left: 10px;
+}
+
+.share:hover {
+    color: lime;
+}
