--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -1,9 +1,3 @@
-.divTable,
-.ddTable {
-    width: fit-content;
-    border-collapse: collapse;
-}
-
 $table-header: #1976D2;
 $table-header-border: #1565C0;
 $table-border: #d9d9d9;
@@ -35,7 +29,7 @@ $table-border: #d9d9d9;
 
 .divTable {
     width: fit-content;
-    border: 1px solid blue;
+    z-index: 0;
 }
 
 
@@ -63,14 +57,6 @@ $table-border: #d9d9d9;
     padding: 0.4em 0.6em;
 }
 
-.th,
-.gridtd {
-    white-space: nowrap;
-    overflow: hidden;
-    text-align: left;
-    font-size: 14px;
-}
-
 .th {
     position: relative;
     font-weight: bold;
@@ -78,7 +64,6 @@ $table-border: #d9d9d9;
     cursor: pointer;
     overflow: hidden;
     color: black;
-    border-top-width: 1;
     border-top-style: solid;
     background-color: white;
     border-top-color: #CCCCCC;
@@ -198,6 +183,7 @@ $table-border: #d9d9d9;
     display: block;
     transform: translateY(25%);
     margin: 0px;
+    z-index: 0;
 }
 
 
@@ -217,6 +203,7 @@ $table-border: #d9d9d9;
     display: block;
     transform: translateY(25%);
     margin: 0px;
+    z-index: 0;
 }
 
 .rowdivider {
@@ -225,6 +212,7 @@ $table-border: #d9d9d9;
     user-select: none;
     touch-action: none;
     display: flex;
+    z-index: 0;
 }
 
 .rowdivider:hover {
