--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -10,29 +10,27 @@
   z-index: 1;
   width: 100%;
   height: fit-content;
-  padding-bottom: 5px;
-
 }
 
 .rz-body {
-  position: fixed !important;;
-  padding: 0 !important;;
-  border-style: solid !important;;
-  max-width: 90vw !important;;
-  width: 90vw !important;
-  left: var(--sb-width) !important;
-  top: var(--tb-height) !important;
-  height: 95vh !important;
-  overflow: auto !important;
-  transition: var(--transform) !important;
-  transition-duration: 0.3s !important;
+  position: fixed;;
+  padding: 0;;
+  border-style: solid;;
+  max-width: 90vw;;
+  width: 90vw;
+  left: var(--sb-width);
+  top: var(--tb-height);
+  height: 95vh;
+  overflow: auto;
+  transition: var(--transform);
+  transition-duration: 0.3s;
 }
 .rz-body.rz-body-collapsed {
-  max-width: 100% !important;
-  width: 100% !important;
-  left: 0 !important;
-  transition: var(--transform) !important;
-  transition-duration: 0.3s !important;
+  max-width: 100%;
+  width: 100%;
+  left: 0;
+  transition: var(--transform);
+  transition-duration: 0.3s;
 }
 
 .sidebar {
