--- a/src/pages/Grid.module.scss
+++ b/src/pages/Grid.module.scss
@@ -15,7 +15,7 @@
     align-self: flex-start;
     max-width: 200px;
     position: absolute;
-    z-index: 1;
+    z-index: 100000000;
 }
 
 .input {
