--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -95,7 +95,7 @@ $table-border: #d9d9d9;
 // }
 
 .tr:hover {
-    border: 1px solid blue;
+    // border: 1px solid blue;
     cursor: pointer;
 }
 
