--- a/src/pages/Grid.module.scss
+++ b/src/pages/Grid.module.scss
@@ -1,7 +1,6 @@
 .container {
-    // display: flex;
-    // flex-wrap: wrap;
-    // align-items: flex-start;
+    position: absolute;
+    align-content: flex-end;
     flex-direction: column;
     width: 100%;
 }
