--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -54,7 +54,8 @@ $table-border: #d9d9d9;
     vertical-align: middle;
     z-index: 0;
     box-sizing: content-box;
-    padding: 0.4em 0.6em;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .th {
