--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -222,8 +222,53 @@ input {
   vertical-align: middle;
   align-items: center;
   flex-direction: row;
+  border-top: 2px solid #e2e8f0;
+  padding-top: 0.5rem;
 }
 
 .page-button {
   color: black;
+}
+
+
+.button {
+  align-items: center;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 14px;
+  color: black;
+  border-style: solid;
+  /* border-color: white; */
+  cursor: pointer;
+  margin: 2px;
+  border-radius: 15px;
+  display: block;
+  transform: translateY(25%);
+  margin: 0px;
+  z-index: 0;
+}
+.button:hover {
+  background-color: white;
+}
+p {
+  color: grey;
+}
+
+.active-button {
+  background-color: #f38c8c;
+  transition-duration: 0.2s;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 14px;
+  color: black;
+  border-style: solid;
+  /* border-color: white; */
+  cursor: pointer;
+  margin: 2px;
+  border-radius: 15px;
+  display: block;
+  transform: translateY(25%);
+  margin: 0px;
+  z-index: 0;
 }
