--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -272,3 +272,11 @@ p {
   margin: 0px;
   z-index: 0;
 }
+
+.red {
+  color: rgb(248, 165, 165);
+  background-color: transparent;
+}
+.red:hover {
+  color: red;
+}
