--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -19,7 +19,7 @@
   max-width: 90vw;;
   width: 90vw;
   left: var(--sb-width);
-  top: var(--tb-height);
+  // top: var(--tb-height);
   height: 95vh;
   overflow: auto;
   transition: var(--transform);
@@ -38,7 +38,8 @@
   width: var(--sb-width);
   height: 100vh;
   position: fixed;
-  top: var(--tb-height);
+  // top: var(--tb-height);
+  top: 0;
   left: 0;
   background-color: var(--sb-bg);
   z-index: 1;
@@ -108,7 +109,7 @@
   cursor: pointer;
   position: relative;
   position: fixed;
-  padding-top: 5px;
+  // padding-top: 5px;
   left: 0;
 }
 
@@ -825,4 +826,8 @@
   z-index: 1000000;
   flex-direction: column;
   align-items: stretch;
+}
+
+.collapsed {
+  transform: translateX(calc(var(--sb-width)));
 }
