--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -281,8 +281,9 @@ p {
   color: red;
 }
 
-.collapsed {
+/* .collapsed {
   position: absolute;
   z-index: 10;
+  left: 0;
   background-color: transparent;
-}
+} */
