--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,23 +1,10 @@
-/* styles for top bar */
-.topbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: var(--tb-height);
-  background-color: var(--sb-bg);
-  color: #fff;
-  display: flex;
-  z-index: 1;
-  width: 100%;
-  height: fit-content;
-}
 
 .rz-body {
-  position: fixed;;
-  padding: 0;;
-  border-style: solid;;
-  // max-width: 90vw;;
-  // width: 90vw;
+  position: fixed;
+  padding: 0;
+  border-style: solid;
+  max-width: 100%;
+  width: 100%;
   left: var(--sb-width);
   // top: var(--tb-height);
   height: 95vh;
