--- a/src/pages/GenericDropdown.module.scss
+++ b/src/pages/GenericDropdown.module.scss
@@ -2,6 +2,7 @@
 .ddTable {
     width: fit-content;
     border-collapse: collapse;
+    // z-index: 1001;
 }
 
 .ddTable {
@@ -9,19 +10,24 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
+    // z-index: 1001;
 }
 
 .divTable {
     width: fit-content;
+    border: 1px solid blue;
 }
 
+// .th {
+//     z-index: 1001;
+// }
 
 .tr {
     display: flex;
     vertical-align: middle;
     align-items: center;
     width: 100%;
-    border-top: 2px solid  rgb(105, 105, 105);
+    border-top: 2px solid rgb(105, 105, 105);
     padding-top: 2px;
     padding-bottom: 2px;
     z-index: 0;
@@ -36,8 +42,6 @@
     user-select: none;
     vertical-align: middle;
     box-sizing: content-box;
-    padding: 0.4em 0.6em;
-    z-index: 0;
 }
 
 .th,
@@ -70,8 +74,13 @@
     text-overflow: ellipsis;
     // box-sizing: border-box;
     user-select: text;
+    padding: 0.4em 0.6em;
     // border-left: 2px solid rgb(105, 105, 105);
     // border-right: 2px solid  rgb(105, 105, 105);
+}
+
+.td:hover {
+    z-index: 1001;
 }
 
 // .tr>.td {
@@ -82,6 +91,7 @@
 // }
 
 .tr:hover {
+    border: 1px solid blue;
     cursor: pointer;
 }
 
@@ -140,10 +150,11 @@
 }
 
 .dd-container {
+    display: flex;
     background-color: #6b6666;
     padding: 10px;
     position: absolute;
-    z-index: 0;
+    z-index: 1001;
     // border: 1px solid yellow;
     resize: both;
 }
@@ -249,11 +260,6 @@
     color: lime;
 }
 
-.searchicon {
-    position: absolute;
-    float: right;
-    cursor: crosshair;
-}
 
 .thead {
     display: flex;
@@ -273,8 +279,19 @@
 }
 
 .searchicon {
+    display: flex;
     color: white;
+    align-content: flex-end;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    cursor: crosshair;
 }
+
+// .searchicon {
+//     position: absolute;
+//     float: right;
+//     cursor: crosshair;
+// }
 
 
 .search-panel {
@@ -283,9 +300,23 @@
     margin-bottom: 0.1rem;
     margin-top: 0rem;
     padding: 5px;
-    height: 30px;
+    height: 45px;
+    width: 100%;
+    cursor: text;
 }
 
 .search-panel:hover {
     border: white;
+}
+
+.tr:hover {
+    border: 1px solid white;
+}
+.tr.td:hover {
+    background-color: #f03a3a;
+}
+
+.tr.th {
+    background-color: white;
+    // margin-right: 20px;
 }
