zindex seems to be working

--- a/src/pages/DynamicGrid.module.scss
+++ b/src/pages/DynamicGrid.module.scss
@@ -334,3 +334,7 @@ $table-border: #d9d9d9;
     vertical-align: middle;
     align-items: center;
 }
+
+.td:hover {
+    background-color:rgb(253, 109, 109);
+}
