--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,7 +44,7 @@
 
   /* Write your own custom base styles here */
   html {
-    color-scheme: light;
+    color-scheme: dark;
 
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: transparent;
